2010-06-04  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.cc: New source.
	* Makefile.am: Add it.
	* dim-vector.h (dim_vector::chop_all_singletons, 
	dim_vector::str, dim_vector::num_ones, dim_vector::safe_numel, 
	dim_vector::squeeze, dim_vector::concat, dim_vector::redim):
	Move bodies to dim_vector.cc. 
	(dim_vector::concat): Rewrite.
	* Array.cc (Array::cat): Fix dim_vector concatenation. Don't use 0x0
	as neutral element, because it isn't with dim > 1.

2010-06-01  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::optimize_dimensions): New method.
	* Array.h: Declare it.

2010-06-01  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::maybe_delete_dims): Remove method (makes no
	longer sense).
	* Array.h: Update decls.

2010-05-20  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::compute_index (const octave_idx_type *,
	int)): New method overload.
	(dim_vector::compute_index, dim_vector::cum_compute_index,
	dim_vector::increment_index): Add missing const qualifiers.

	* Array-util.cc (compute_index (..., const dim_vector&)): Rewrite,
	add new overloads. Move code from Array<T>::checkelem here.
	* Array-util.h: Update decls.
	* Array.h (Array<T>::compute_index): Forward to the above.
	(Array<T>::compute_index_unchecked): New method.
	(Array<T>::elem, Array<T>::xelem): Call it here.

	* Array.cc (Array<T>::checkelem): Use compute_index where suitable.

2010-05-19  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (mx_inline_cumcount): Fix 2D version instantiation.

2010-05-14  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::linearize): Remove.
	* Array.h (Array<T>::linearize): Remove decl.

2010-05-13  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc (Matrix::lssolve): Remove warnings about rank.
	* fMatrix.cc (FloatMatrix::lssolve): Ditto.
	* CMatrix.cc (ComplexMatrix::lssolve): Ditto.
	* fCMatrix.cc (FloatComplexMatrix::lssolve): Ditto.

2010-05-11  Jaroslav Hajek  <highegg@gmail.com>
