@@ -1,3 +1,8 @@
+2010-06-06  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* data.cc (Frem, Fmod): Specify template arguments of binmap
+	explicitely.
+
 2010-06-02  Jaroslav Hajek  <highegg@gmail.com>
 
 	* DLD-FUNCTIONS/strfind.cc (Fqs_replace): Allow overlapped matches.
